# telemetry-efficiency-simulation

./: .gitignore  BUILD.bazel  Data_Generator.m  Generated_Data.csv  MODULE.bazel  ProcessedData.csv  README.md  RandomBinaryGenerator.cpp  ReceivedData.csv  Receiver.cpp  Transmitter.cpp  Transmitter.h  Transmitter2.cpp  common_variables.h  makefile  packet.proto
