load("@protobuf//bazel:proto_library.bzl", "proto_library")

proto_library(
    name = "packet_proto",
    srcs = ["packet.proto"],
    deps = [],
)

cc_proto_library(
    name = "packet_cc_proto",
    deps = [":packet_proto"],
)

cc_library(
    name = "common_vars",
    hdrs = ["common_variables.h"],
    visibility = ["//visibility:public"],  # Make the library accessible to other targets
)

cc_binary(
  name = "Transmitter",
  deps = [
    ":common_vars",
    ":packet_cc_proto",
    "@protobuf//:protobuf",
    "@abseil-cpp//absl/strings"
  ],
  srcs = ["Transmitter.cpp"],
)

cc_binary(
  name = "Receiver",
  deps = [
    ":common_vars",
    ":Transmitter",
    ":packet_cc_proto",
    "@protobuf//:protobuf",
    "@abseil-cpp//absl/strings"
  ],
  srcs = ["Receiver.cpp"],
)

#cc_binary(
#  name = "all",
#  deps = [
#    "Transmitter",
#    "Receiver"
#  ],
#)